[gd_scene load_steps=2 format=3 uid="uid://training_chat"]

[ext_resource type="Script" path="res://scripts/training_chat.gd" id="1"]

[node name="TrainingChat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Loading..."

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FooterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Input" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message..."

[node name="SendButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[node name="EndButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "End Session"
